--- a/public/front_end/index.html
+++ b/public/front_end/index.html
@@ -5,11 +5,10 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Clebio de Souza</title>
-   <link rel="icon" href="../public/profile.jpg">
+   <link rel="icon" href="../archive/icon.jpg">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <script src="https://kit.fontawesome.com/260c211569.js" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="style.css">   
-   <>
+   <link rel="stylesheet" href="../styles/style.css">  
 </head>
 <body>
    
@@ -25,7 +24,7 @@
                <li><a href="#experience">Experience</a></li>
                <li><a href="#skills">Proficiency</a></li>
                <li><a href="#projects">Projects</a></li>
-               <li><a href="../front_end/public/resume.pdf">Curriculum</a></li>
+               <li><a href="../archive/resume.pdf">Curriculum</a></li>
             </ol>
          </nav>
       </header> 
@@ -43,7 +42,7 @@
                         Estacio de Sá, while also specializing in both Front and Back End.</p>
                       <!-- Get in touch button, don't forget -->
                   </article>
-                     <img src="../public/profile.jpg" alt="Clebio's headshot photo">
+                     <img src="../assets/profile.jpg" alt="Clebio's headshot photo">
                </section>
                <hr>
                <section id="biography">
