Atualizar o index.html

--- a/public/front_end/index.html
+++ b/public/front_end/index.html
@@ -149,8 +149,8 @@
             <hr>
          <footer>
       </div>
-      <!-- <section id="note"></section>
+      <section id="note"></section>
       <h1 id="blanktext">Portfolio in progress, be patient.</h1>
-   </div> -->
+   </div> 
 </body>
 </html>
