--- a/public/front_end/index.html
+++ b/public/front_end/index.html
@@ -9,6 +9,7 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <script src="https://kit.fontawesome.com/260c211569.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="../styles/style.css">  
+   <script src="../cloud"></script>
 </head>
 <body>
    
