--- a/public/front_end/index.html
+++ b/public/front_end/index.html
@@ -9,14 +9,14 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    <script src="https://kit.fontawesome.com/260c211569.js" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="../styles/style.css">  
-   <script src="../cloud"></script>
 </head>
 <body>
    
    <div id="motherContainer">
       <header>
          <div id="logo">
-            <h1>The Work of Bil.</h1>
+            <h1>The Work o
+               f Bil.</h1>
             <div class="sharpEdge"></div>
          </div>
          <nav id="menu">
@@ -43,7 +43,7 @@
                         Estacio de Sá, while also specializing in both Front and Back End.</p>
                       <!-- Get in touch button, don't forget -->
                   </article>
-                     <img src="../assets/profile.gif" alt="Clebio's headshot photo">
+                     <img alt="Clebio's headshot photo" id="profile">
                </section>
                <hr>
                <section id="biography">
@@ -153,5 +153,6 @@
       <section id="note"></section>
       <h1 id="blanktext">Portfolio in progress, be patient.</h1>
    </div> 
+   <script type="module" src="../routes"></script>
 </body>
 </html>
